--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "framer-motion": "^11.0.8",
+    "install": "^0.13.0",
     "next": "14.1.0",
-    "react-dom": "18"
+    "npm": "^10.5.0",
+    "popmotion": "^11.0.5",
+    "react-dom": "18",
+    "sass": "^1.72.0"
   },
   "devDependencies": {
     "autoprefixer": "10.0.1",
