--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sass": "^1.72.0"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^14.1.4",
     "autoprefixer": "10.0.1",
     "eslint": "8",
     "eslint-config-next": "14.1.0",
